Bug en forof del mapeo de users

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 <body>
     <header class="header">
         <h1 class="header-title">Gatos Gamer</h1>
+        <nav class="header-nav">
+            <button class="header-nav-btn users">usuarios</button>
+            <button class="header-nav-btn games">videojuegos</button>
+            <button class="header-nav-btn platforms">plataformas</button>
+        </nav>
     </header>
 
     <main class="main">
