bug en appendChild del drawUsers users

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <main class="main">
         <ul class="main-users"></ul>
+        <ul class="main-games"></ul>
     </main>
 
     <footer class="footer">
