relacion usuario videojuego fav

--- a/index.html
+++ b/index.html
@@ -5,19 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./Scripts/gatos-gamer.js" defer></script>
     <link rel="stylesheet" href="./styles/main-styles.css">
-    <title>Document</title>
+    <title>Gatos Gamer</title>
 </head>
 <body>
     <header class="header">
-        <h1 class="header-title">Gatos Gamer</h1>
+        <a href="/"><img src="https://images.fineartamerica.com/images/artworkimages/medium/3/gamer-cat-myloot-transparent.png" class="header-logo"></img></a>
         <nav class="header-nav">
             <button class="header-nav-btn users">usuarios</button>
             <button class="header-nav-btn games">videojuegos</button>
-            <button class="header-nav-btn platforms">plataformas</button>
+            <button class="header-nav-btn platforms">productos</button>
         </nav>
     </header>
 
     <main class="main">
+        <div class="main-page">
+            <h1 class="main-page-title">GatosGamer</h1>
+            <p class="main-page-wellcome">Buenas noches, si eres un gato y te encantan los videojuegos este es tu sitio.</p>
+            <p class="main-page-wellcome">Podrás registrarte aquí y añadir tus videojuegos favoritos</p>
+            
+        </div>
         <ul class="main-users"></ul>
         <ul class="main-games"></ul>
     </main>
